--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,7 @@ body {
 body {
     font-family: Arial, sans-serif;
     background-color: #ade6bf;
-    background-image: url("https://24hstore.vn/upload_images/images/hinh-nen-may-tinh/hinh_nen_thien_nhien_(2).jpg");
+    background-image: url("");
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
